--- a/package.json
+++ b/package.json
@@ -15,15 +15,19 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-react": "^6.24.1",
+    "gulp": "^3.9.1",
+    "gulp-cli": "^2.0.1",
+    "react-scripts": "1.1.4",
+    "rework": "^1.0.1",
+    "rework-pure-grids": "^1.0.0",
     "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.3",
-    "react-scripts": "1.1.4"
+    "webpack-cli": "^2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "pure-grids": "./scripts/css-grids.js"
   }
-
 }
