--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
   "author": "Barney Hanlon <barney.hanlon@shrikeh.net",
   "license": "MIT",
   "dependencies": {
+    "npm": "^6.0.1",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
